// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Recovery Phrase Chips Component should match snapshot 1`] = `
<div>
  <div
    class="mm-box recovery-phrase-chips mm-box--margin-bottom-4 mm-box--padding-4 mm-box--display-grid mm-box--border-style-solid mm-box--border-color-border-muted mm-box--border-width-1"
  >
    <div
      class="mm-box recovery-phrase-chips__chips mm-box--display-grid mm-box--justify-content-center mm-box--align-items-center"
      data-testid="recovery-phrase-chips"
    >
      <div
        class="mm-box mm-box--padding-2 mm-box--display-flex mm-box--width-full"
      >
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
        >
          1.
        </p>
        <p
          class="mm-box mm-text mm-text--body-md mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-top-1 mm-box--padding-right-2 mm-box--padding-bottom-1 mm-box--padding-left-2 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-text-default mm-box--rounded-xl mm-box--border-style-solid mm-box--border-color-border-default mm-box--border-width-1"
          data-testid="recovery-phrase-chip-0"
        >
          debris
        </p>
      </div>
      <div
        class="mm-box mm-box--padding-2 mm-box--display-flex mm-box--width-full"
      >
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
        >
          2.
        </p>
        <p
          class="mm-box mm-text mm-text--body-md mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-top-1 mm-box--padding-right-2 mm-box--padding-bottom-1 mm-box--padding-left-2 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-text-default mm-box--rounded-xl mm-box--border-style-solid mm-box--border-color-border-default mm-box--border-width-1"
          data-testid="recovery-phrase-chip-1"
        >
          dizzy
        </p>
      </div>
      <div
        class="mm-box mm-box--padding-2 mm-box--display-flex mm-box--width-full"
      >
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
        >
          3.
        </p>
        <p
          class="mm-box mm-text mm-text--body-md mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-top-1 mm-box--padding-right-2 mm-box--padding-bottom-1 mm-box--padding-left-2 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-text-default mm-box--rounded-xl mm-box--border-style-solid mm-box--border-color-border-default mm-box--border-width-1"
          data-testid="recovery-phrase-chip-2"
        >
          just
        </p>
      </div>
      <div
        class="mm-box mm-box--padding-2 mm-box--display-flex mm-box--width-full"
      >
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
        >
          4.
        </p>
        <p
          class="mm-box mm-text mm-text--body-md mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-top-1 mm-box--padding-right-2 mm-box--padding-bottom-1 mm-box--padding-left-2 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-text-default mm-box--rounded-xl mm-box--border-style-solid mm-box--border-color-border-default mm-box--border-width-1"
          data-testid="recovery-phrase-chip-3"
        >
          program
        </p>
      </div>
      <div
        class="mm-box mm-box--padding-2 mm-box--display-flex mm-box--width-full"
      >
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
        >
          5.
        </p>
        <p
          class="mm-box mm-text mm-text--body-md mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-top-1 mm-box--padding-right-2 mm-box--padding-bottom-1 mm-box--padding-left-2 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-text-default mm-box--rounded-xl mm-box--border-style-solid mm-box--border-color-border-default mm-box--border-width-1"
          data-testid="recovery-phrase-chip-4"
        >
          just
        </p>
      </div>
      <div
        class="mm-box mm-box--padding-2 mm-box--display-flex mm-box--width-full"
      >
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
        >
          6.
        </p>
        <p
          class="mm-box mm-text mm-text--body-md mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-top-1 mm-box--padding-right-2 mm-box--padding-bottom-1 mm-box--padding-left-2 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-text-default mm-box--rounded-xl mm-box--border-style-solid mm-box--border-color-border-default mm-box--border-width-1"
          data-testid="recovery-phrase-chip-5"
        >
          float
        </p>
      </div>
      <div
        class="mm-box mm-box--padding-2 mm-box--display-flex mm-box--width-full"
      >
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
        >
          7.
        </p>
        <p
          class="mm-box mm-text mm-text--body-md mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-top-1 mm-box--padding-right-2 mm-box--padding-bottom-1 mm-box--padding-left-2 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-text-default mm-box--rounded-xl mm-box--border-style-solid mm-box--border-color-border-default mm-box--border-width-1"
          data-testid="recovery-phrase-chip-6"
        >
          decrease
        </p>
      </div>
      <div
        class="mm-box mm-box--padding-2 mm-box--display-flex mm-box--width-full"
      >
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
        >
          8.
        </p>
        <p
          class="mm-box mm-text mm-text--body-md mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-top-1 mm-box--padding-right-2 mm-box--padding-bottom-1 mm-box--padding-left-2 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-text-default mm-box--rounded-xl mm-box--border-style-solid mm-box--border-color-border-default mm-box--border-width-1"
          data-testid="recovery-phrase-chip-7"
        >
          vacant
        </p>
      </div>
      <div
        class="mm-box mm-box--padding-2 mm-box--display-flex mm-box--width-full"
      >
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
        >
          9.
        </p>
        <p
          class="mm-box mm-text mm-text--body-md mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-top-1 mm-box--padding-right-2 mm-box--padding-bottom-1 mm-box--padding-left-2 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-text-default mm-box--rounded-xl mm-box--border-style-solid mm-box--border-color-border-default mm-box--border-width-1"
          data-testid="recovery-phrase-chip-8"
        >
          alarm
        </p>
      </div>
      <div
        class="mm-box mm-box--padding-2 mm-box--display-flex mm-box--width-full"
      >
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
        >
          10.
        </p>
        <p
          class="mm-box mm-text mm-text--body-md mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-top-1 mm-box--padding-right-2 mm-box--padding-bottom-1 mm-box--padding-left-2 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-text-default mm-box--rounded-xl mm-box--border-style-solid mm-box--border-color-border-default mm-box--border-width-1"
          data-testid="recovery-phrase-chip-9"
        >
          reduce
        </p>
      </div>
      <div
        class="mm-box mm-box--padding-2 mm-box--display-flex mm-box--width-full"
      >
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
        >
          11.
        </p>
        <p
          class="mm-box mm-text mm-text--body-md mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-top-1 mm-box--padding-right-2 mm-box--padding-bottom-1 mm-box--padding-left-2 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-text-default mm-box--rounded-xl mm-box--border-style-solid mm-box--border-color-border-default mm-box--border-width-1"
          data-testid="recovery-phrase-chip-10"
        >
          speak
        </p>
      </div>
      <div
        class="mm-box mm-box--padding-2 mm-box--display-flex mm-box--width-full"
      >
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
        >
          12.
        </p>
        <p
          class="mm-box mm-text mm-text--body-md mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-top-1 mm-box--padding-right-2 mm-box--padding-bottom-1 mm-box--padding-left-2 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-text-default mm-box--rounded-xl mm-box--border-style-solid mm-box--border-color-border-default mm-box--border-width-1"
          data-testid="recovery-phrase-chip-11"
        >
          stadium
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Recovery Phrase Chips Component should match snapshot of confirm recovery phrase with inputs of indicies to check 1`] = `
<div>
  <div
    class="mm-box recovery-phrase-chips mm-box--margin-bottom-4 mm-box--padding-4 mm-box--display-grid mm-box--border-style-solid mm-box--border-color-border-muted mm-box--border-width-1"
  >
    <div
      class="mm-box recovery-phrase-chips__chips mm-box--display-grid mm-box--justify-content-center mm-box--align-items-center"
      data-testid="recovery-phrase-chips"
    >
      <div
        class="mm-box mm-box--padding-2 mm-box--display-flex mm-box--width-full"
      >
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
        >
          1.
        </p>
        <p
          class="mm-box mm-text mm-text--body-md mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-top-1 mm-box--padding-right-2 mm-box--padding-bottom-1 mm-box--padding-left-2 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-text-default mm-box--rounded-xl mm-box--border-style-solid mm-box--border-color-border-default mm-box--border-width-1"
          data-testid="recovery-phrase-chip-0"
        >
          debris
        </p>
      </div>
      <div
        class="mm-box mm-box--padding-2 mm-box--display-flex mm-box--width-full"
      >
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
        >
          2.
        </p>
        <input
          autocomplete="off"
          class="mm-box mm-text mm-input mm-text--body-md mm-box--margin-0 mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-0 mm-box--padding-top-1 mm-box--padding-right-2 mm-box--padding-bottom-1 mm-box--padding-left-2 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-text-default mm-box--background-color-background-default mm-box--rounded-xl mm-box--border-style-solid mm-box--border-color-primary-default mm-box--border-width-1"
          data-testid="recovery-phrase-input-1"
          required=""
          type="text"
          value=""
        />
      </div>
      <div
        class="mm-box mm-box--padding-2 mm-box--display-flex mm-box--width-full"
      >
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
        >
          3.
        </p>
        <p
          class="mm-box mm-text mm-text--body-md mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-top-1 mm-box--padding-right-2 mm-box--padding-bottom-1 mm-box--padding-left-2 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-text-default mm-box--rounded-xl mm-box--border-style-solid mm-box--border-color-border-default mm-box--border-width-1"
          data-testid="recovery-phrase-chip-2"
        >
          just
        </p>
      </div>
      <div
        class="mm-box mm-box--padding-2 mm-box--display-flex mm-box--width-full"
      >
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
        >
          4.
        </p>
        <p
          class="mm-box mm-text mm-text--body-md mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-top-1 mm-box--padding-right-2 mm-box--padding-bottom-1 mm-box--padding-left-2 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-text-default mm-box--rounded-xl mm-box--border-style-solid mm-box--border-color-border-default mm-box--border-width-1"
          data-testid="recovery-phrase-chip-3"
        >
          program
        </p>
      </div>
      <div
        class="mm-box mm-box--padding-2 mm-box--display-flex mm-box--width-full"
      >
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
        >
          5.
        </p>
        <p
          class="mm-box mm-text mm-text--body-md mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-top-1 mm-box--padding-right-2 mm-box--padding-bottom-1 mm-box--padding-left-2 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-text-default mm-box--rounded-xl mm-box--border-style-solid mm-box--border-color-border-default mm-box--border-width-1"
          data-testid="recovery-phrase-chip-4"
        >
          just
        </p>
      </div>
      <div
        class="mm-box mm-box--padding-2 mm-box--display-flex mm-box--width-full"
      >
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
        >
          6.
        </p>
        <input
          autocomplete="off"
          class="mm-box mm-text mm-input mm-text--body-md mm-box--margin-0 mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-0 mm-box--padding-top-1 mm-box--padding-right-2 mm-box--padding-bottom-1 mm-box--padding-left-2 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-text-default mm-box--background-color-background-default mm-box--rounded-xl mm-box--border-style-solid mm-box--border-color-primary-default mm-box--border-width-1"
          data-testid="recovery-phrase-input-5"
          required=""
          type="text"
          value=""
        />
      </div>
      <div
        class="mm-box mm-box--padding-2 mm-box--display-flex mm-box--width-full"
      >
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
        >
          7.
        </p>
        <p
          class="mm-box mm-text mm-text--body-md mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-top-1 mm-box--padding-right-2 mm-box--padding-bottom-1 mm-box--padding-left-2 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-text-default mm-box--rounded-xl mm-box--border-style-solid mm-box--border-color-border-default mm-box--border-width-1"
          data-testid="recovery-phrase-chip-6"
        >
          decrease
        </p>
      </div>
      <div
        class="mm-box mm-box--padding-2 mm-box--display-flex mm-box--width-full"
      >
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
        >
          8.
        </p>
        <p
          class="mm-box mm-text mm-text--body-md mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-top-1 mm-box--padding-right-2 mm-box--padding-bottom-1 mm-box--padding-left-2 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-text-default mm-box--rounded-xl mm-box--border-style-solid mm-box--border-color-border-default mm-box--border-width-1"
          data-testid="recovery-phrase-chip-7"
        >
          vacant
        </p>
      </div>
      <div
        class="mm-box mm-box--padding-2 mm-box--display-flex mm-box--width-full"
      >
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
        >
          9.
        </p>
        <p
          class="mm-box mm-text mm-text--body-md mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-top-1 mm-box--padding-right-2 mm-box--padding-bottom-1 mm-box--padding-left-2 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-text-default mm-box--rounded-xl mm-box--border-style-solid mm-box--border-color-border-default mm-box--border-width-1"
          data-testid="recovery-phrase-chip-8"
        >
          alarm
        </p>
      </div>
      <div
        class="mm-box mm-box--padding-2 mm-box--display-flex mm-box--width-full"
      >
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
        >
          10.
        </p>
        <p
          class="mm-box mm-text mm-text--body-md mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-top-1 mm-box--padding-right-2 mm-box--padding-bottom-1 mm-box--padding-left-2 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-text-default mm-box--rounded-xl mm-box--border-style-solid mm-box--border-color-border-default mm-box--border-width-1"
          data-testid="recovery-phrase-chip-9"
        >
          reduce
        </p>
      </div>
      <div
        class="mm-box mm-box--padding-2 mm-box--display-flex mm-box--width-full"
      >
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
        >
          11.
        </p>
        <input
          autocomplete="off"
          class="mm-box mm-text mm-input mm-text--body-md mm-box--margin-0 mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-0 mm-box--padding-top-1 mm-box--padding-right-2 mm-box--padding-bottom-1 mm-box--padding-left-2 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-text-default mm-box--background-color-background-default mm-box--rounded-xl mm-box--border-style-solid mm-box--border-color-primary-default mm-box--border-width-1"
          data-testid="recovery-phrase-input-10"
          required=""
          type="text"
          value=""
        />
      </div>
      <div
        class="mm-box mm-box--padding-2 mm-box--display-flex mm-box--width-full"
      >
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
        >
          12.
        </p>
        <p
          class="mm-box mm-text mm-text--body-md mm-box--margin-right-1 mm-box--margin-left-1 mm-box--padding-top-1 mm-box--padding-right-2 mm-box--padding-bottom-1 mm-box--padding-left-2 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-text-default mm-box--rounded-xl mm-box--border-style-solid mm-box--border-color-border-default mm-box--border-width-1"
          data-testid="recovery-phrase-chip-11"
        >
          stadium
        </p>
      </div>
    </div>
  </div>
</div>
`;
